--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ android {
     }
     release {
       minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'src/main/assets/www/proguard-custom.txt'
     }
   }
