--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 android {
   buildTypes {
     debug {
-      minifyEnabled false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'src/main/assets/www/proguard-custom.txt'
     }
     release {
