Refact final solution for proguard only in release mode

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 android {
   buildTypes {
     debug {
-      minifyEnabled true
-      shrinkResources true
+      minifyEnabled false
+      shrinkResources false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'src/main/assets/www/proguard-custom.txt'
     }
     release {
